--- a/sitemap.html
+++ b/sitemap.html
@@ -242,6 +242,49 @@ h2 {
   color: #333;
   margin-bottom: 20px;
 }
+@media (max-width: 768px) {
+  .container-fluid, .container {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+
+  .sitemap > li {
+    font-size: 16px;
+    margin-bottom: 8px;
+  }
+
+  .sitemap > li > a {
+    font-size: 16px;
+  }
+
+  h2 {
+    font-size: 1.5rem;
+  }
+
+  .sitemap ul {
+    margin-left: 0;
+    padding-left: 10px;
+  }
+
+  .sitemap ul li {
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 480px) {
+  .sitemap > li {
+    font-size: 14px;
+    margin-bottom: 6px;
+  }
+
+  .sitemap > li > a {
+    font-size: 14px;
+  }
+
+  h2 {
+    font-size: 1.2rem;
+  }
+}
 </style>
 	</head>
 
@@ -521,7 +564,7 @@ h2 {
 		  <div class="container">
 			<div class="row">
 			  <div class="col-md-12">
-				<h2 class="text-center my-4">Site Map</h2>
+				
 				<ul class="sitemap">
 				  <li><a href="index.html">Home</a></li>
 	  
@@ -531,56 +574,56 @@ h2 {
 						<li>
 							<a href="#" style="color: #0056b3;">Commercial Compliance</a>
 							<ul>
-								<li><a href="professionaltax.html">Professional Tax</a></li>
+								<li><i class='fas fa-arrow-right' style="margin-right: 10px;"></i><a href="professionaltax.html">Professional Tax</a></li>
 							</ul>
 						  </li>					  <li>
 						<a href="#" style="color: #0056b3;">Electrical Approvals</a>
 						<ul>
-						  <li><a href="ceigapproval.html">CEIG Approval</a></li>
+						  <li><i class='fas fa-arrow-right' style="margin-right: 10px;"></i><a href="ceigapproval.html">CEIG Approval</a></li>
 						</ul>
 					  </li>
 					  <li>
 						<a href="#" style="color: #0056b3;">Environmental Compliance</a>
 						<ul>
-						  <li><a href="cfe.html">CFE</a></li>
-						  <li><a href="cfo.html">CFO</a></li>
-						  <li><a href="emp.html">EMP</a></li>
-						  <li><a href="envclearance.html">Environmental Clearance</a></li>
-						  <li><a href="enviauditing.html">Environmental Auditing</a></li>
-						  <li><a href="envcompliancemonitoring.html">Environmental Compliance Monitoring</a></li>
+						  <li><i class='fas fa-arrow-right' style="margin-right: 10px;"></i><a href="cfe.html">CFE</a></li>
+						  <li><i class='fas fa-arrow-right' style="margin-right: 10px;"></i><a href="cfo.html">CFO</a></li>
+						  <li><i class='fas fa-arrow-right' style="margin-right: 10px;"></i><a href="emp.html">EMP</a></li>
+						  <li><i class='fas fa-arrow-right' style="margin-right: 10px;"></i><a href="envclearance.html">Environmental Clearance</a></li>
+						  <li><i class='fas fa-arrow-right' style="margin-right: 10px;"></i><a href="enviauditing.html">Environmental Auditing</a></li>
+						  <li><i class='fas fa-arrow-right' style="margin-right: 10px;"></i><a href="envcompliancemonitoring.html">Environmental Compliance Monitoring</a></li>
 						</ul>
 					  </li>
 					  <li>
 						<a href="#" style="color: #0056b3;">Factory Compliance</a>
 						<ul>
-						  <li><a href="factorylicence.html">Factory Licence</a></li>
+							<li><i class='fas fa-arrow-right' style="margin-right: 10px;"></i><a href="factorylicence.html">Factory Licence</a></li>
 						</ul>
 					  </li>
 					  <li>
 						<a href="#" style="color: #0056b3;">Fire Compliance</a>
 						<ul>
-						  <li><a href="firenoc.html">Fire NOC</a></li>
+						  <li><i class='fas fa-arrow-right' style="margin-right: 10px;"></i><a href="firenoc.html">Fire NOC</a></li>
 						</ul>
 					  </li>
 					  <li>
 						<a href="#" style="color: #0056b3;">Labor Compliance</a>
 						<ul>
-						  <li><a href="bocw.html">BOCW</a></li>
-						  <li><a href="clra.html">CLRA</a></li>
-						  <li><a href="ismw.html">ISMW</a></li>
-						  <li><a href="lwf.html">LWF</a></li>
+						  <li><i class='fas fa-arrow-right' style="margin-right: 10px;"></i><a href="bocw.html">BOCW</a></li>
+						  <li><i class='fas fa-arrow-right' style="margin-right: 10px;"></i><a href="clra.html">CLRA</a></li>
+						  <li><i class='fas fa-arrow-right' style="margin-right: 10px;"></i><a href="ismw.html">ISMW</a></li>
+						  <li><i class='fas fa-arrow-right' style="margin-right: 10px;"></i><a href="lwf.html">LWF</a></li>
 						</ul>
 					  </li>
 					  <li>
 						<a href="#" style="color: #0056b3;">S&E Compliance</a>
 						<ul>
-						  <li><a href="s&eregistration.html">S&E Registration</a></li>
+						  <li><i class='fas fa-arrow-right' style="margin-right: 10px;"></i><a href="s&eregistration.html">S&E Registration</a></li>
 						</ul>
 					  </li>
 					  <li>
 						<a href="#" style="color: #0056b3;">Vendor Auditing</a>
 						<ul>
-						  <li><a href="vendorauditguidelines.html">Vendor Audit Guidelines</a></li>
+						  <li><i class='fas fa-arrow-right' style="margin-right: 10px;"></i><a href="vendorauditguidelines.html">Vendor Audit Guidelines</a></li>
 						</ul>
 					  </li>
 					</ul>
@@ -589,11 +632,11 @@ h2 {
 				  <li>
 					<a href="auditing.html">Auditing</a>
 					<ul>
-					  <li><a href="ims.html">IMS Auditing</a></li>
-					  <li><a href="safety.html">Safety Audit</a></li>
-					  <li><a href="env.html">Environment Audit</a></li>
-					  <li><a href="healthandsafety.html">Healthy and Safety Audit</a></li>
-					  <li><a href="survelliance.html">Surveillance Audit</a></li>
+					  <li><i class='fas fa-arrow-right' style="margin-right: 10px;"></i><a href="ims.html">IMS Auditing</a></li>
+					  <li><i class='fas fa-arrow-right' style="margin-right: 10px;"></i><a href="safety.html">Safety Audit</a></li>
+					  <li><i class='fas fa-arrow-right' style="margin-right: 10px;"></i><a href="env.html">Environment Audit</a></li>
+					  <li><i class='fas fa-arrow-right' style="margin-right: 10px;"></i><a href="healthandsafety.html">Healthy and Safety Audit</a></li>
+					  <li><i class='fas fa-arrow-right' style="margin-right: 10px;"></i><a href="survelliance.html">Surveillance Audit</a></li>
 					</ul>
 				  </li>
 	  
@@ -603,24 +646,24 @@ h2 {
 					  <li>
 						<a href="#" style="color: #0056b3;">ISO</a>
 						<ul>
-						  <li><a href="certification1.html">ISO 45001:2018</a></li>
-						  <li><a href="certification2.html">ISO 14001:2015</a></li>
-						  <li><a href="certification3.html">ISO 9001:2015</a></li>
-						  <li><a href="certification4.html">IMS</a></li>
+						  <li><i class='fas fa-arrow-right' style="margin-right: 10px;"></i><a href="certification1.html">ISO 45001:2018</a></li>
+						  <li><i class='fas fa-arrow-right' style="margin-right: 10px;"></i><a href="certification2.html">ISO 14001:2015</a></li>
+						  <li><i class='fas fa-arrow-right' style="margin-right: 10px;"></i><a href="certification3.html">ISO 9001:2015</a></li>
+						  <li><i class='fas fa-arrow-right' style="margin-right: 10px;"></i><a href="certification4.html">IMS</a></li>
 						</ul>
 					  </li>
 					  <li>
 						<a href="#" style="color: #0056b3;">British Safety Council Certification</a>
 						<ul>
-						  <li><a href="fivestar1.html">Five Star Occupational Health and Safety Audit</a></li>
-						  <li><a href="fivestar2.html">Five Star Environmental Sustainability Audit</a></li>
-						  <li><a href="fivestar3.html">Five Star Integrated Audit</a></li>
-						  <li><a href="fivestar4.html">Five Star Group Audit</a></li>
-						  <li><a href="fivestar5.html">Five Star Wellbeing Audit</a></li>
-						  <li><a href="fivestar6.html">Pre-Audit (Gap Analysis) Services</a></li>
-						  <li><a href="fivestar7.html">ISO 14001 Environmental Audit</a></li>
-						  <li><a href="fivestar8.html">ISO 45001 Health and Safety Management Standard</a></li>
-						  <li><a href="fivestar9.html">Fire Safety Management Audit</a></li>
+						  <li><i class='fas fa-arrow-right' style="margin-right: 10px;"></i><a href="fivestar1.html">Five Star Occupational Health and Safety Audit</a></li>
+						  <li><i class='fas fa-arrow-right' style="margin-right: 10px;"></i><a href="fivestar2.html">Five Star Environmental Sustainability Audit</a></li>
+						  <li><i class='fas fa-arrow-right' style="margin-right: 10px;"></i><a href="fivestar3.html">Five Star Integrated Audit</a></li>
+						  <li><i class='fas fa-arrow-right' style="margin-right: 10px;"></i><a href="fivestar4.html">Five Star Group Audit</a></li>
+						  <li><i class='fas fa-arrow-right' style="margin-right: 10px;"></i><a href="fivestar5.html">Five Star Wellbeing Audit</a></li>
+						  <li><i class='fas fa-arrow-right' style="margin-right: 10px;"></i><a href="fivestar6.html">Pre-Audit (Gap Analysis) Services</a></li>
+						  <li><i class='fas fa-arrow-right' style="margin-right: 10px;"></i><a href="fivestar7.html">ISO 14001 Environmental Audit</a></li>
+						  <li><i class='fas fa-arrow-right' style="margin-right: 10px;"></i><a href="fivestar8.html">ISO 45001 Health and Safety Management Standard</a></li>
+						  <li><i class='fas fa-arrow-right' style="margin-right: 10px;"></i><a href="fivestar9.html">Fire Safety Management Audit</a></li>
 						</ul>
 					  </li>
 					</ul>
@@ -629,79 +672,79 @@ h2 {
 				  <li>
 					<a href="documentation.html">Documentation</a>
 					<ul>
-					  <li><a href="ohsms.html">OHSMS</a></li>
-					  <li><a href="ems.html">EMS</a></li>
-					  <li><a href="qms.html">QMS</a></li>
+					  <li><i class='fas fa-arrow-right' style="margin-right: 10px;"></i><a href="ohsms.html">OHSMS</a></li>
+					  <li><i class='fas fa-arrow-right' style="margin-right: 10px;"></i><a href="ems.html">EMS</a></li>
+					  <li><i class='fas fa-arrow-right' style="margin-right: 10px;"></i><a href="qms.html">QMS</a></li>
 					</ul>
 				  </li>
 	  
 				  <li>
 					<a href="fireequipments.html">Fire Equipments</a>
 					<ul>
-					  <li><a href="fireprotection.html">Fire Protection</a></li>
-					  <li><a href="firedetection.html">Fire Detection</a></li>
-					  <li><a href="firesuppression.html">Fire Suppression</a></li>
-					  <li><a href="mlcfiresystemservices.html">MLC Fire System Services</a></li>
+					  <li><i class='fas fa-arrow-right' style="margin-right: 10px;"></i><a href="fireprotection.html">Fire Protection</a></li>
+					  <li><i class='fas fa-arrow-right' style="margin-right: 10px;"></i><a href="firedetection.html">Fire Detection</a></li>
+					  <li><i class='fas fa-arrow-right' style="margin-right: 10px;"></i><a href="firesuppression.html">Fire Suppression</a></li>
+					  <li><i class='fas fa-arrow-right' style="margin-right: 10px;"></i><a href="mlcfiresystemservices.html">MLC Fire System Services</a></li>
 					</ul>
 				  </li>
 	  
 				  <li>
 					<a href="ppesupply.html">PPE's Supply</a>
 					<ul>
-					  <li><a href="covid.html">COVID-19</a></li>
-					  <li><a href="aboveneck.html">Above Neck</a></li>
-					  <li><a href="footprotection.html">Foot Protection</a></li>
-					  <li><a href="handprotection.html">Hand Protection</a></li>
-					  <li><a href="fallprotection.html">Fall Protection</a></li>
-					  <li><a href="bodyprotection.html">Body Protection</a></li>
+					  <li><i class='fas fa-arrow-right' style="margin-right: 10px;"></i><a href="covid.html">COVID-19</a></li>
+					  <li><i class='fas fa-arrow-right' style="margin-right: 10px;"></i><a href="aboveneck.html">Above Neck</a></li>
+					  <li><i class='fas fa-arrow-right' style="margin-right: 10px;"></i><a href="footprotection.html">Foot Protection</a></li>
+					  <li><i class='fas fa-arrow-right' style="margin-right: 10px;"></i><a href="handprotection.html">Hand Protection</a></li>
+					  <li><i class='fas fa-arrow-right' style="margin-right: 10px;"></i><a href="fallprotection.html">Fall Protection</a></li>
+					  <li><i class='fas fa-arrow-right' style="margin-right: 10px;"></i><a href="bodyprotection.html">Body Protection</a></li>
 					</ul>
 				  </li>
 	  
 				  <li>
 					<a href="ehstrainings.html">MLC Trainings</a>
 					<ul>
-					  <li><a href="online.html">Online</a></li>
-					  <li><a href="classroom.html">Classroom</a></li>
-					  <li><a href="corporate.html">Corporate</a></li>
+					  <li><i class='fas fa-arrow-right' style="margin-right: 10px;"></i><a href="online.html">Online</a></li>
+					  <li><i class='fas fa-arrow-right' style="margin-right: 10px;"></i><a href="classroom.html">Classroom</a></li>
+					  <li><i class='fas fa-arrow-right' style="margin-right: 10px;"></i><a href="corporate.html">Corporate</a></li>
 					</ul>
 				  </li>
 	  
 				  <li>
 					<a href="services2.html">Services</a>
 					<ul>
-					  <li><a href="employeehs.html">Employee Health Services</a></li>
-					  <li><a href="Esg.html">ESG End-to-End Solution</a></li>
-					  <li><a href="gmp.html">GMP Audit</a></li>
-					  <li><a href="GMPQUALITYCONSULTING.html">GMP Quality Consulting</a></li>
-					  <li><a href="hac.html">HAC Services</a></li>
-					  <li><a href="incidentinvestigation.html">Incident Investigation</a></li>
-					  <li><a href="industrialhygene.html">Industrial Hygiene</a></li>
-					  <li><a href="Pharma.html">Pharma Clean Room Equipments</a></li>
-					  <li><a href="powersystem.html">Power System Studies</a></li>
-					  <li><a href="qualityrisk.html">Quality Consultation Services</a></li>
-					  <li><a href="PLANTSETUPandUPGRADATION.html">Quality Plant Setup & Upgradation</a></li>
-					  <li><a href="RespiratoryEmergencyProtectionSystems.html">Respiratory & Emergency Protection Systems</a></li>
-					  <li><a href="safetystudies.html">Safety Studies</a></li>
-					  <li><a href="supplierqualificationaudit.html">Supplier Qualification Audit</a></li>
-					  <li><a href="developmentservice.html">Development Services</a></li>
+					  <li><i class='fas fa-arrow-right' style="margin-right: 10px;"></i><a href="employeehs.html">Employee Health Services</a></li>
+					  <li><i class='fas fa-arrow-right' style="margin-right: 10px;"></i><a href="Esg.html">ESG End-to-End Solution</a></li>
+					  <li><i class='fas fa-arrow-right' style="margin-right: 10px;"></i><a href="gmp.html">GMP Audit</a></li>
+					  <li><i class='fas fa-arrow-right' style="margin-right: 10px;"></i><a href="GMPQUALITYCONSULTING.html">GMP Quality Consulting</a></li>
+					  <li><i class='fas fa-arrow-right' style="margin-right: 10px;"></i><a href="hac.html">HAC Services</a></li>
+					  <li><i class='fas fa-arrow-right' style="margin-right: 10px;"></i><a href="incidentinvestigation.html">Incident Investigation</a></li>
+					  <li><i class='fas fa-arrow-right' style="margin-right: 10px;"></i><a href="industrialhygene.html">Industrial Hygiene</a></li>
+					  <li><i class='fas fa-arrow-right' style="margin-right: 10px;"></i><a href="Pharma.html">Pharma Clean Room Equipments</a></li>
+					  <li><i class='fas fa-arrow-right' style="margin-right: 10px;"></i><a href="powersystem.html">Power System Studies</a></li>
+					  <li><i class='fas fa-arrow-right' style="margin-right: 10px;"></i><a href="qualityrisk.html">Quality Consultation Services</a></li>
+					  <li><i class='fas fa-arrow-right' style="margin-right: 10px;"></i><a href="PLANTSETUPandUPGRADATION.html">Quality Plant Setup & Upgradation</a></li>
+					  <li><i class='fas fa-arrow-right' style="margin-right: 10px;"></i><a href="RespiratoryEmergencyProtectionSystems.html">Respiratory & Emergency Protection Systems</a></li>
+					  <li><i class='fas fa-arrow-right' style="margin-right: 10px;"></i><a href="safetystudies.html">Safety Studies</a></li>
+					  <li><i class='fas fa-arrow-right' style="margin-right: 10px;"></i><a href="supplierqualificationaudit.html">Supplier Qualification Audit</a></li>
+					  <li><i class='fas fa-arrow-right' style="margin-right: 10px;"></i><a href="developmentservice.html">Development Services</a></li>
 					</ul>
 				  </li>
 	  
 				  <li>
 					<a href="#">Company</a>
 					<ul>
-					  <li><a href="about.html">About Us</a></li>
-					  <li><a href="Blog.html">Our Blog</a></li>
-					  <li><a href="contact.html">Contact Us</a></li>
+					  <li><i class='fas fa-arrow-right' style="margin-right: 10px;"></i><a href="about.html">About Us</a></li>
+					  <li><i class='fas fa-arrow-right' style="margin-right: 10px;"></i><a href="Blog.html">Our Blog</a></li>
+					  <li><i class='fas fa-arrow-right' style="margin-right: 10px;"></i><a href="contact.html">Contact Us</a></li>
 					</ul>
 				  </li>
 	  
 				  <li>
 					<a href="#">Legal</a>
 					<ul>
-					  <li><a href="terms.html">Terms of Use</a></li>
-					  <li><a href="privacypolicy.html">Privacy Policy</a></li>
-					  <li><a href="sitemap.html">Site Map</a></li>
+					  <li><i class='fas fa-arrow-right' style="margin-right: 10px;"></i><a href="terms.html">Terms of Use</a></li>
+					  <li><i class='fas fa-arrow-right' style="margin-right: 10px;"></i><a href="privacypolicy.html">Privacy Policy</a></li>
+					  <li><i class='fas fa-arrow-right' style="margin-right: 10px;"></i><a href="sitemap.html">Site Map</a></li>
 					</ul>
 				  </li>
 				</ul>
