--- a/sitemap.html
+++ b/sitemap.html
@@ -244,8 +244,8 @@ h2 {
 }
 @media (max-width: 768px) {
   .container-fluid, .container {
-    padding-left: 0px;
-    padding-right: 0px;
+    padding-left: 10px;
+    padding-right: 10px;
   }
 
   .sitemap > li {
@@ -560,11 +560,11 @@ h2 {
         <h1 style="color:white;background: linear-gradient(#1560bd,#000040);">Site Map</h1>
     </div>
 	<main>
-		<div class="container-fluid">
-		  <div class="container">
+		<div class="main-container">
+		  <div class="small-container">
 			<div class="row">
 			  <div class="col-md-12">
-				
+				<h2 class="text-center my-4">Site Map</h2>
 				<ul class="sitemap">
 				  <li><a href="index.html">Home</a></li>
 	  
