--- a/vendorauditguidelines.html
+++ b/vendorauditguidelines.html
@@ -208,12 +208,12 @@
             color: #dc3545;
         }
         
-        ul {
+        .card ul {
             padding-left: 1.5rem;
             text-align: justify;
         }
         
-        ul li {
+        .card ul li {
             margin-bottom: 0.5rem;
             text-align: justify;
         }
