--- a/professionaltax.html
+++ b/professionaltax.html
@@ -209,12 +209,12 @@
             color: #1560bd;
         }
         
-        ul {
+        .card ul {
             padding-left: 1.5rem;
             text-align: justify;
         }
         
-        ul li {
+        .card ul li {
             margin-bottom: 0.5rem;
             text-align: justify;
         }
