--- a/bodyprotection.html
+++ b/bodyprotection.html
@@ -94,12 +94,12 @@
             color: rgb(1, 1, 50);
         }
         
-        ul {
+        .container1 ul {
             margin-bottom: 15px;
             padding-left: 20px;
         }
         
-        li {
+        .container1 li {
             margin-bottom: 8px;
             color: #555;
         }
