--- a/env.html
+++ b/env.html
@@ -127,11 +127,11 @@
 .card {
     border: none; /* Remove border from cards */
 }
-li {
+.card li {
     list-style-type: disc;
 	margin-bottom: 10px; /* Adds space between list items */
 }
-ul {
+.card ul {
 	padding: 20px;
 }
 
