--- a/gmp.html
+++ b/gmp.html
@@ -542,7 +542,7 @@
             overflow-y: scroll;
         }
         
-        ul {
+        .card ul {
             padding-left: 20px;
         }
         
