--- a/vendorauditguidelines.html
+++ b/vendorauditguidelines.html
@@ -205,7 +205,7 @@
         
         .card-title {
             font-weight: bold;
-            color: #dc3545;
+            color: #1560bd;
         }
         
         .card ul {
