--- a/factorylicence.html
+++ b/factorylicence.html
@@ -207,7 +207,7 @@
         
         .card-title {
             font-weight: bold;
-            color: #dc3545;
+            color: #1560bd;
         }
         
         .card ul {
