--- a/s&eregistration.html
+++ b/s&eregistration.html
@@ -206,7 +206,7 @@
         
         .card-title {
             font-weight: bold;
-            color: #dc3545;
+            color: #1560bd;
         }
         
         .card ul {
