--- a/factorylicence.html
+++ b/factorylicence.html
@@ -251,7 +251,7 @@
         
         .image-container img {
             max-width: 100%;
-            height: auto;
+            height: 350px;
             border-radius: 10px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             transition: transform 0.3s ease, box-shadow 0.3s ease;
@@ -286,7 +286,7 @@
         .unique-image-one {
             max-width: 45%;
             /* Sets maximum width for desktop */
-            height: auto;
+            height: 400px;
             border-radius: 15px;
             border: 2px solid #4CAF50;
             transition: transform 0.3s ease, box-shadow 0.3s ease;
@@ -294,9 +294,9 @@
         }
         
         .unique-image-two {
-            max-width: 40%;
+            max-width: 45%;
             /* Sets maximum width for desktop */
-            height: auto;
+            height: 400px;
             border-radius: 10px;
             border: 2px solid #2196F3;
             transition: transform 0.3s ease, box-shadow 0.3s ease;
