--- a/firenoc.html
+++ b/firenoc.html
@@ -255,9 +255,10 @@
         }
         
         th {
-            background-color: #f4f4f4;
+            background-color: #1560bd;
             font-size: 18px;
             text-align: justify;
+            color: white;
         }
         
         tr:nth-child(even) {
@@ -586,10 +587,10 @@
                 <div class="col-md-12">
                     <div class="card">
                         <div class="card-body">
-                            <p><strong style="color: #dc3545;">Provisional Certificate: </strong> A provisional Fire NOC certificate is issued before the actual construction of the project starts. A provisional certificate ensures that the construction plan
+                            <p><strong style="color: #1560bd;">Provisional Certificate: </strong> A provisional Fire NOC certificate is issued before the actual construction of the project starts. A provisional certificate ensures that the construction plan
                                 follows all rules made by the fire department.</p>
 
-                            <p><strong style="color: #dc3545;">Final Certificate:</strong> This certificate is issued before the occupancy certificate. The NOC department ensures that all the conditions in provisional NOC are fulfilled and all firefighting
+                            <p><strong style="color: #1560bd;">Final Certificate:</strong> This certificate is issued before the occupancy certificate. The NOC department ensures that all the conditions in provisional NOC are fulfilled and all firefighting
                                 devices are in place and then only a final Fire NOC is issued.</p>
                         </div>
                     </div>
