--- a/calculatorqehs.html
+++ b/calculatorqehs.html
@@ -182,7 +182,7 @@
     text-align: center;
     background-image:url('images/vindus_clients_images/blue4.jpg');  /* Blue */
     color: #1560bd;
-    padding: 40px 0;
+    padding: 40px 20px;
     background-size: cover;
 }
 
