--- a/calculatorqehs.html
+++ b/calculatorqehs.html
@@ -531,9 +531,8 @@
 
 
 <div class="main-header">
-    <h1>World's No.1 EHS / Safety / HSE / QHSE Calculator</h1>
-    <p>Your trusted tool ✔️ for Environment, Health & Safety Calculations</p>
-    <p>(As per Indian, OSHA & Other countries standards)</p>
+    <h1>World's No.1 QEHS  Calculator</h1>
+    <p>Your trusted tool ✔️ for Quality, Environment, Health, Safety & Fire Calculations</p>
 </div>
 
 <div class="main-content">
