--- a/sclwireropecalculator.html
+++ b/sclwireropecalculator.html
@@ -573,9 +573,11 @@
             Use this calculator to find the Safe Working Load (SWL) of a wire rope.<br> 
             The SWL tells you the maximum weight the rope can safely handle. 
             Knowing this is important for lifting and rigging tasks to avoid accidents. 
-            Just enter the wire rope diameter (in millimeters) and click "Calculate" to see the SWL.
+            Just enter the wire rope diameter (in millimeters) and click "Calculate" to see the SWL.<br>
+            The result is displayed in tons for easier interpretation.
         </p>
     </div>
+    
     
 
     <script>
