--- a/auditing.html
+++ b/auditing.html
@@ -601,20 +601,20 @@
                             <p>Our pool of auditors are fully committed in adding value to your esteemed organisation QEHS System by providing detailed and informative audit reports based on the following list of audit services:</p>
                             <div class="col-md-6 ">
                                 <ul class="list-group  list-group-flush">
-                                    <li class="list-group-item d-flex align-items-center border-top-0 border-start-0 border-end-0"><i class="fas fa-clipboard-check me-3 fa-fw"></i> Mandatory SHMS Audits</li>
-                                    <li class="list-group-item d-flex align-items-center border-start-0 border-end-0"><i class="fas fa-building me-3 fa-fw"></i> Construction Worksite</li>
-                                    <li class="list-group-item d-flex align-items-center border-start-0 border-end-0"><i class="fas fa-cogs me-3 fa-fw"></i> Metalworking Industry</li>
-                                    <li class="list-group-item d-flex align-items-center border-start-0 border-end-0"><i class="fas fa-ship me-3 fa-fw"></i> Shipyard</li>
-                                    <li class="list-group-item d-flex align-items-center border-start-0 border-end-0"><i class="fas fa-industry me-3 fa-fw"></i> Oil Refinery</li>
-                                    <li class="list-group-item d-flex align-items-center border-start-0 border-end-0"><i class="fas fa-industry me-3 fa-fw"></i> Petrochemical Plant</li>
+                                    <li class="list-group-item  align-items-center border-top-0 border-start-0 border-end-0"><i class="fas fa-clipboard-check me-3 fa-fw"></i> Mandatory SHMS Audits</li>
+                                    <li class="list-group-item  align-items-center border-start-0 border-end-0"><i class="fas fa-building me-3 fa-fw"></i> Construction Worksite</li>
+                                    <li class="list-group-item  align-items-center border-start-0 border-end-0"><i class="fas fa-cogs me-3 fa-fw"></i> Metalworking Industry</li>
+                                    <li class="list-group-item  align-items-center border-start-0 border-end-0"><i class="fas fa-ship me-3 fa-fw"></i> Shipyard</li>
+                                    <li class="list-group-item  align-items-center border-start-0 border-end-0"><i class="fas fa-industry me-3 fa-fw"></i> Oil Refinery</li>
+                                    <li class="list-group-item  align-items-center border-start-0 border-end-0"><i class="fas fa-industry me-3 fa-fw"></i> Petrochemical Plant</li>
                                 </ul>
                             </div>
                             <div class="col-md-6">
                                 <ul class="list-group list-group-flush">
                                     <li class="list-group-item d-flex align-items-center border-top-0 border-start-0 border-end-0"><i class="fas fa-microchip me-3 fa-fw"></i> Semiconductor Wafer Fabrication Plant</li>
-                                    <li class="list-group-item d-flex align-items-center border-start-0 border-end-0"><i class="fas fa-vials me-3 fa-fw"></i> Chemical Manufacturing Plant</li>
-                                    <li class="list-group-item d-flex align-items-center border-start-0 border-end-0"><i class="fas fa-prescription-bottle-alt me-3 fa-fw"></i> Pharmaceutical Plant</li>
-                                    <li class="list-group-item d-flex align-items-center border-start-0 border-end-0"><i class="fas fa-warehouse me-3 fa-fw"></i> Bulk Storage Terminal</li>
+                                    <li class="list-group-item  align-items-center border-start-0 border-end-0"><i class="fas fa-vials me-3 fa-fw"></i> Chemical Manufacturing Plant</li>
+                                    <li class="list-group-item  align-items-center border-start-0 border-end-0"><i class="fas fa-prescription-bottle-alt me-3 fa-fw"></i> Pharmaceutical Plant</li>
+                                    <li class="list-group-item  align-items-center border-start-0 border-end-0"><i class="fas fa-warehouse me-3 fa-fw"></i> Bulk Storage Terminal</li>
                                     <li class="list-group-item d-flex align-items-center border-start-0 border-end-0"><i class="fas fa-clipboard-list me-3 fa-fw"></i> Internal ISO 9001 / ISO 14001 / ISO 45001</li>
                                     <li class="list-group-item d-flex align-items-center border-start-0 border-end-0 border-bottom-0"><i class="fas fa-biohazard me-3 fa-fw"></i> Safety Audit for the Handling of Hazardous Substances</li>
                                 </ul>
