--- a/environmentalsubcalculators.html
+++ b/environmentalsubcalculators.html
@@ -607,6 +607,16 @@
         <h2 class="sub-heading">Environment Calculators</h2>
         <div class="button-container">
             <a href="ambientnoisecal.html" class="calculator-btn">Ambient Noise Level Calculator</a>
+            <a href="carbonfootprintcal.html" class="calculator-btn">Carbon Footprint Calculator</a>
+            <a href="energyconsumtioncal.html" class="calculator-btn">Energy Consumption Calculator</a>
+            <!-- <a href="recyclingimpactcalculator.html" class="calculator-btn">Recycling Impact Calculator </a>
+            <a href="sustainabletransportcal.html" class="calculator-btn">Sustainable Transportation Calculator</a> 
+            <a href="wastegenerationcal.html" class="calculator-btn">Waste Generation Calculator</a>
+            <a href="waterusagecal.html" class="calculator-btn">Water Usage Calculator</a>
+             -->
+
+            <a href="wastesegregationcl.html" class="calculator-btn">Waste Segregation Efficiency Calculatorr</a>
+
 
         </div>
     </section>
