--- a/traininghourcal.html
+++ b/traininghourcal.html
@@ -557,10 +557,7 @@ strong{
         <label for="sessionsPerMonth">Number of Sessions per Month:</label>
         <input type="number" id="sessionsPerMonth" placeholder="Enter number of sessions per month">
     </div>
-    <div class="form-group">
-        <label for="attendees">Number of Attendees per Session:</label>
-        <input type="number" id="attendees" placeholder="Enter number of attendees per session">
-    </div>
+   
     <div class="form-group">
         <label for="trainingMinutes">Training Duration per Session (Minutes):</label>
         <input type="number" id="trainingMinutes" placeholder="Enter total duration of each session in minutes">
@@ -592,16 +589,15 @@ strong{
 function calculateTrainingHours() {
     const months = parseFloat(document.getElementById('months').value);
     const sessionsPerMonth = parseFloat(document.getElementById('sessionsPerMonth').value);
-    const attendees = parseFloat(document.getElementById('attendees').value);
     const trainingMinutes = parseFloat(document.getElementById('trainingMinutes').value);
 
-    if (isNaN(months) || isNaN(sessionsPerMonth) || isNaN(attendees) || isNaN(trainingMinutes) || months <= 0 || sessionsPerMonth <= 0 || attendees <= 0 || trainingMinutes <= 0) {
+    if (isNaN(months) || isNaN(sessionsPerMonth) || isNaN(trainingMinutes) || months <= 0 || sessionsPerMonth <= 0 || trainingMinutes <= 0) {
         document.getElementById('result').innerText = "Please enter valid positive numbers.";
         return;
     }
 
     // Total training time for one session (in minutes)
-    const sessionTime = attendees * trainingMinutes;  
+    const sessionTime = trainingMinutes;  
 
     // Total training time for one month (in minutes)
     const totalMonthlyTrainingTime = sessionTime * sessionsPerMonth;  
@@ -628,6 +624,7 @@ function calculateTrainingHours() {
          Monthly Training Hours: ${monthlyTrainingHours.toFixed(2)} hours 
          (${monthlyTrainingDays.toFixed(2)} days)`;
 }
+
 </script>
 
 
