--- a/traininghourcal.html
+++ b/traininghourcal.html
@@ -574,14 +574,13 @@ strong{
     <ul>
         <li><strong>Number of Months:</strong> The number of months over which the training is conducted.</li>
         <li><strong>Number of Sessions per Month:</strong> The number of training sessions you conduct each month.</li>
-        <li><strong>Number of Attendees per Session:</strong> The total number of people attending each session.</li>
         <li><strong>Training Duration per Session (Minutes):</strong> The duration of each training session in minutes.</li>
     </ul>
     <p>
         After entering the values, click <strong>Calculate</strong> to see the **total training hours and equivalent days** over the specified number of months, as well as the monthly training hours and days.
     </p>
     <p>
-        The **total training hours** is calculated by multiplying the number of months, number of sessions, number of attendees, and the training duration for each session. The equivalent days are then derived by dividing the total hours by 24 hours in a day.
+        The **total training hours** is calculated by multiplying the number of months, number of sessions, and the training duration for each session. The equivalent days are then derived by dividing the total hours by 24 hours in a day.
     </p>
 </div>
 
