added new calculators

--- a/safetysubcalculators.html
+++ b/safetysubcalculators.html
@@ -610,6 +610,8 @@
         </div>
         <h2 class="sub-heading">Safety Calculators</h2>
         <div class="button-container">
+            <a href="densityofmaterial.html" class="calculator-btn">Density of a material Calculator</a>
+
             <a href="emergencydrillrate.html" class="calculator-btn">Emergency drill success rate calculator</a>
 
             <a href="excavationslopecal.html" class="calculator-btn">Excavation Slope Calculator</a>
