--- a/thermodynamiccal.html
+++ b/thermodynamiccal.html
@@ -583,34 +583,35 @@ strong{
 </div>
 
 <script>
-   function calculateKelvin() {
-    const celsius = parseFloat(document.getElementById('celsiusTemp').value);
-    
-    if (isNaN(celsius)) {
-        document.getElementById('kelvinResult').innerText = "Please enter a valid temperature in Celsius.";
-        return;
-    }
-
-    const kelvin = celsius + 273.15;
-    let feedback = "";
-
-    if (kelvin < 200) {
-        feedback = "This is an extremely low temperature, found in cryogenic applications or outer space.";
-    } else if (kelvin >= 200 && kelvin < 273.15) {
-        feedback = "This is below the freezing point of water, similar to polar regions or industrial cold storage.";
-    } else if (kelvin >= 273.15 && kelvin <= 373.15) {
-        feedback = "This is within the normal range of Earth’s temperatures, from freezing to boiling water.";
-    } else if (kelvin > 373.15 && kelvin <= 1000) {
-        feedback = "This is a high temperature, found in industrial furnaces, metalworking, or volcanic environments.";
-    } else {
-        feedback = "This is an extremely high temperature, found in plasma physics, welding, or space re-entry conditions.";
-    }
-
-    document.getElementById('kelvinResult').innerText = `Equivalent Temperature: ${kelvin.toFixed(2)} K. ${feedback}`;
-}
-
-</script>
-
+    function calculateKelvin() {
+     const celsius = parseFloat(document.getElementById('celsiusTemp').value);
+     
+     if (isNaN(celsius)) {
+         document.getElementById('kelvinResult').innerText = "Please enter a valid temperature in Celsius.";
+         return;
+     }
+ 
+     const kelvin = celsius + 273.15;
+     let feedback = "";
+ 
+     if (kelvin < 200) {
+         feedback = "This is an extremely low temperature, found in cryogenic applications or outer space.";
+     } else if (kelvin >= 200 && kelvin < 273.15) {
+         feedback = "This is below the freezing point of water, similar to polar regions or industrial cold storage.";
+     } else if (kelvin >= 273.15 && kelvin < 318.15) {
+         feedback = "This is a warm temperature, typically found in hot climates.";
+     } else if (kelvin >= 318.15 && kelvin <= 373.15) {
+         feedback = "This is within the range of hot temperatures, found in tropical regions or heatwaves.";
+     } else if (kelvin > 373.15 && kelvin <= 1000) {
+         feedback = "This is a high temperature, found in industrial furnaces, metalworking, or volcanic environments.";
+     } else {
+         feedback = "This is an extremely high temperature, found in plasma physics, welding, or space re-entry conditions.";
+     }
+ 
+     document.getElementById('kelvinResult').innerText = `Equivalent Temperature: ${kelvin.toFixed(2)} K. ${feedback}`;
+ }
+ </script>
+ 
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
