--- a/healthsubcalculators.html
+++ b/healthsubcalculators.html
@@ -609,6 +609,8 @@
         </div>
         <h2 class="sub-heading">Health Calculators</h2>
         <div class="button-container">
+            <a href="bmicalculator.html" class="calculator-btn">BMI Calculator</a>
+
             <a href="drinkcal.html" class="calculator-btn">Daily Drinking Water Intake Calculator</a>
             <a href="anxietyassessment.html" class="calculator-btn">Generalized Anxiety Disorder Assessment</a>
         </div>
