--- a/bmicalculator.html
+++ b/bmicalculator.html
@@ -284,10 +284,10 @@ select {
 table {
     width: 50%;
     border-collapse: collapse;
-    margin-top: 20px;
-   
+    margin: 20px auto; /* Centers table */
 }
 
+/* Table Cells */
 th, td {
     padding: 12px;
     text-align: center;
@@ -295,12 +295,14 @@ th, td {
     font-size: 16px;
 }
 
+/* Header Styles */
 th {
     background-color: #1560bd;
     color: white;
     font-weight: bold;
 }
 
+/* Row Styles */
 tr:nth-child(even) {
     background-color: #f2f2f2;
 }
@@ -311,11 +313,17 @@ tr:hover {
 
 /* Responsive Table */
 @media (max-width: 600px) {
+    table {
+        width: 90%; /* Adjusts width for mobile */
+        margin: 20px auto; /* Ensures it stays centered */
+    }
+    
     th, td {
         font-size: 14px;
         padding: 8px;
     }
 }
+
 
 </style>
 	</head>
