--- a/energytransformcal.html
+++ b/energytransformcal.html
@@ -568,8 +568,8 @@ strong{
   <div class="note-container">
     <h3>Note:</h3>
     <p>
-      This Energy Transfer Calculator helps determine the amount of heat energy (Q) transferred to or from a substance, using the formula:
-      <strong>Q = m × Cp × ΔT</strong>
+      This Energy Transfer Calculator helps determine the amount of heat energy (Q) transferred to or from a substance
+     
       where:
     </p>
     <ul>
