--- a/safetysubcalculators.html
+++ b/safetysubcalculators.html
@@ -610,11 +610,14 @@
         </div>
         <h2 class="sub-heading">Safety Calculators</h2>
         <div class="button-container">
+
             <a href="changeinentropycal.html" class="calculator-btn">Change in Entropy Calculator</a>
 
             <a href="densityofmaterial.html" class="calculator-btn">Density of a material Calculator</a>
             <a href="earthingcalculator.html" class="calculator-btn">Earthing System Calculator</a>
             <a href="energytransformcal.html" class="calculator-btn">Energy Transfer Calculator</a>
+            <a href="ergonomicriskfactor.html" class="calculator-btn">Ergonomic Risk Score Calculator</a>
+
 
             <a href="emergencydrillrate.html" class="calculator-btn">Emergency drill success rate calculator</a>
 
@@ -626,6 +629,7 @@
             <a href="ltifrcal.html" class="calculator-btn">Lost Time Injury Frequency Rate Calculator</a>
             <a href="liveloadcal.html" class="calculator-btn"> Live Load Calculation (LL)</a>
             <a href="loadperlegcal.html" class="calculator-btn">Load Distribution Per Leg</a>
+            <a href="leadingsafetyindicator.html" class="calculator-btn">Leading Safety Indicators</a>
 
             <a href="nema&ipratecal.html" class="calculator-btn">NEMA and IP Ratings Calculator</a>
             <a href="trir.html" class="calculator-btn">OSHA Total Recordable Incident Rate Calculator</a>
@@ -637,12 +641,14 @@
             <a href="sclwireropecalculator.html" class="calculator-btn">SWL of Wire Rope Calculator</a>
             <a href="stackheightcal.html" class="calculator-btn">Stack Height Calculator</a>
             <a href="specificgravitycal.html" class="calculator-btn">Specific Gravity Calculator</a>
+            <a href="safetyfactor.html" class="calculator-btn">Safety Factor Calculator</a>
+
 
             <a href="traininghourcal.html" class="calculator-btn">Training Hour Calculation</a>
             <a href="deadloadcal.html" class="calculator-btn">Total Dead Load Calculation (DL)</a>
             <a href="totalintendload.html" class="calculator-btn">Total Intended Load (TIL)</a>
             <a href="totalenthalapycal.html" class="calculator-btn">Total Enthalpy of Steam Calculator</a>
-
+             
             <a href="wireropecal.html" class="calculator-btn">Wire Rope Grips Calculator</a>
            
 
