--- a/environmentalsubcalculators.html
+++ b/environmentalsubcalculators.html
@@ -611,6 +611,9 @@
 
             <a href="carbonfootprintcal.html" class="calculator-btn">Carbon Footprint Calculator</a>
             <a href="energyconsumtioncal.html" class="calculator-btn">Energy Consumption Calculator</a>
+            <a href="exposurelevelcal.html" class="calculator-btn">Exposure Level (Concentration) Calculator</a>
+            <a href="maximumallowconcentration.html" class="calculator-btn">Maximum Allowable Concentration(MAC) Calculator</a>
+
              <a href="recyclingcarbonfootprintcalculator.html" class="calculator-btn">Recycling Carbon Footprint Savings Calculator </a>
              <a href="recyclingimpactcal.html" class="calculator-btn">Recycling Impact Calculator </a>
              <a href="thermodynamiccal.html" class="calculator-btn">Thermodynamic Temperature Calculator</a>
