--- a/healthsubcalculators.html
+++ b/healthsubcalculators.html
@@ -613,6 +613,9 @@
 
             <a href="drinkcal.html" class="calculator-btn">Daily Drinking Water Intake Calculator</a>
             <a href="anxietyassessment.html" class="calculator-btn">Generalized Anxiety Disorder Assessment</a>
+            <a href="heatstressindex.html" class="calculator-btn">Heat Stress Index (HSI)</a>
+
+
         </div>
     </section>
 
